// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalenderMonth /> tests calls render props with given month and its days 1`] = `
------------------------------------------------------------------------------
|                                January 2017                                |
------------------------------------------------------------------------------
| 01 (---) | 02 (---) | 03 (---) | 04 (---) | 05 (---) | 06 (---) | 07 (---) |
------------------------------------------------------------------------------
| 08 (---) | 09 (---) | 10 (---) | 11 (---) | 12 (---) | 13 (---) | 14 (---) |
------------------------------------------------------------------------------
| 15 (---) | 16 (---) | 17 (---) | 18 (---) | 19 (---) | 20 (---) | 21 (---) |
------------------------------------------------------------------------------
| 22 (---) | 23 (---) | 24 (---) | 25 (---) | 26 (---) | 27 (---) | 28 (---) |
------------------------------------------------------------------------------
| 29 (---) | 30 (---) | 31 (---) | 01 (--d) | 02 (--d) | 03 (--d) | 04 (--d) |
------------------------------------------------------------------------------
| 05 (--d) | 06 (--d) | 07 (--d) | 08 (--d) | 09 (--d) | 10 (--d) | 11 (--d) |
------------------------------------------------------------------------------
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 1`] = `
----------
0 (--)
----------
1 (--)
----------
2 (--)
----------
3 (--)
----------
4 (--)
----------
5 (--)
----------
6 (--)
----------
7 (--)
----------
8 (--)
----------
9 (--)
----------
10 (--)
----------
11 (--)
----------
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 2`] = `
----------
1969 (--)
----------
1970 (--)
----------
1971 (--)
----------
1972 (--)
----------
1973 (--)
----------
1974 (--)
----------
1975 (--)
----------
1976 (--)
----------
1977 (--)
----------
1978 (--)
----------
1979 (--)
----------
1980 (--)
----------
1981 (--)
----------
1982 (--)
----------
1983 (--)
----------
1984 (--)
----------
1985 (--)
----------
1986 (--)
----------
1987 (--)
----------
1988 (--)
----------
1989 (--)
----------
1990 (--)
----------
1991 (--)
----------
1992 (--)
----------
1993 (--)
----------
1994 (--)
----------
1995 (--)
----------
1996 (--)
----------
1997 (--)
----------
1998 (--)
----------
1999 (--)
----------
2000 (--)
----------
2001 (--)
----------
2002 (--)
----------
2003 (--)
----------
2004 (--)
----------
2005 (--)
----------
2006 (--)
----------
2007 (--)
----------
2008 (--)
----------
2009 (--)
----------
2010 (--)
----------
2011 (--)
----------
2012 (--)
----------
2013 (--)
----------
2014 (--)
----------
2015 (--)
----------
2016 (--)
----------
2017 (--)
----------
2018 (--)
----------
2019 (--)
----------
2020 (--)
----------
2021 (--)
----------
2022 (--)
----------
2023 (--)
----------
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 3`] = `
----------
0 (-d)
----------
1 (-d)
----------
2 (--)
----------
3 (--)
----------
4 (--)
----------
5 (--)
----------
6 (--)
----------
7 (--)
----------
8 (--)
----------
9 (--)
----------
10 (--)
----------
11 (-d)
----------
`;

exports[`<CalenderMonth /> tests dropdowns are updated when minDate, maxDate are given 4`] = `
----------
2017 (--)
----------
`;

exports[`<CalenderMonth /> tests minDate and maxDate get priorty over startDate and endDate 1`] = `
------------------------------------------------------------------------------
|                                January 2017                                |
------------------------------------------------------------------------------
| 01 (--d) | 02 (--d) | 03 (--d) | 04 (--d) | 05 (--d) | 06 (--d) | 07 (--d) |
------------------------------------------------------------------------------
| 08 (--d) | 09 (--d) | 10 (--d) | 11 (---) | 12 (---) | 13 (---) | 14 (---) |
------------------------------------------------------------------------------
| 15 (---) | 16 (---) | 17 (---) | 18 (---) | 19 (---) | 20 (---) | 21 (---) |
------------------------------------------------------------------------------
| 22 (--d) | 23 (--d) | 24 (--d) | 25 (--d) | 26 (--d) | 27 (--d) | 28 (--d) |
------------------------------------------------------------------------------
| 29 (--d) | 30 (--d) | 31 (--d) | 01 (--d) | 02 (--d) | 03 (--d) | 04 (--d) |
------------------------------------------------------------------------------
| 05 (--d) | 06 (--d) | 07 (--d) | 08 (--d) | 09 (--d) | 10 (--d) | 11 (--d) |
------------------------------------------------------------------------------
`;

exports[`<CalenderMonth /> tests render prop has proper days selected when given 1`] = `
------------------------------------------------------------------------------
|                                January 2017                                |
------------------------------------------------------------------------------
| 01 (--d) | 02 (--d) | 03 (--d) | 04 (--d) | 05 (--d) | 06 (---) | 07 (---) |
------------------------------------------------------------------------------
| 08 (---) | 09 (---) | 10 (---) | 11 (sr-) | 12 (-r-) | 13 (-r-) | 14 (-r-) |
------------------------------------------------------------------------------
| 15 (-r-) | 16 (-r-) | 17 (-r-) | 18 (-r-) | 19 (-r-) | 20 (-r-) | 21 (sr-) |
------------------------------------------------------------------------------
| 22 (---) | 23 (---) | 24 (---) | 25 (---) | 26 (---) | 27 (--d) | 28 (--d) |
------------------------------------------------------------------------------
| 29 (--d) | 30 (--d) | 31 (--d) | 01 (--d) | 02 (--d) | 03 (--d) | 04 (--d) |
------------------------------------------------------------------------------
| 05 (--d) | 06 (--d) | 07 (--d) | 08 (--d) | 09 (--d) | 10 (--d) | 11 (--d) |
------------------------------------------------------------------------------
`;

exports[`<CalenderMonth /> tests showDropdowns gives apt props 1`] = `
----------
0 (--)
----------
1 (--)
----------
2 (--)
----------
3 (--)
----------
4 (--)
----------
5 (--)
----------
6 (--)
----------
7 (--)
----------
8 (--)
----------
9 (--)
----------
10 (--)
----------
11 (--)
----------
`;

exports[`<CalenderMonth /> tests showDropdowns gives apt props 2`] = `
----------
1969 (--)
----------
1970 (--)
----------
1971 (--)
----------
1972 (--)
----------
1973 (--)
----------
1974 (--)
----------
1975 (--)
----------
1976 (--)
----------
1977 (--)
----------
1978 (--)
----------
1979 (--)
----------
1980 (--)
----------
1981 (--)
----------
1982 (--)
----------
1983 (--)
----------
1984 (--)
----------
1985 (--)
----------
1986 (--)
----------
1987 (--)
----------
1988 (--)
----------
1989 (--)
----------
1990 (--)
----------
1991 (--)
----------
1992 (--)
----------
1993 (--)
----------
1994 (--)
----------
1995 (--)
----------
1996 (--)
----------
1997 (--)
----------
1998 (--)
----------
1999 (--)
----------
2000 (--)
----------
2001 (--)
----------
2002 (--)
----------
2003 (--)
----------
2004 (--)
----------
2005 (--)
----------
2006 (--)
----------
2007 (--)
----------
2008 (--)
----------
2009 (--)
----------
2010 (--)
----------
2011 (--)
----------
2012 (--)
----------
2013 (--)
----------
2014 (--)
----------
2015 (--)
----------
2016 (--)
----------
2017 (--)
----------
2018 (--)
----------
2019 (--)
----------
2020 (--)
----------
2021 (--)
----------
2022 (--)
----------
2023 (--)
----------
`;
